# SearchRPI

./: .gitignore  CMakeLists.txt  Database_8cc.html  Database_8cc__incl.map  Database_8cc__incl.md5  Database_8h.html  Database_8h__dep__incl.map  Database_8h__dep__incl.md5  Database_8h__incl.map  Database_8h__incl.md5  Database_8h_source.html  DocDatabase_8cc.html  DocDatabase_8cc__incl.map  DocDatabase_8cc__incl.md5  DocDatabase_8h.html  DocDatabase_8h__dep__incl.map  DocDatabase_8h__dep__incl.md5  DocDatabase_8h__incl.map  DocDatabase_8h__incl.md5  DocDatabase_8h_source.html  Doxyfile  IDatabase_8h.html  IDatabase_8h__dep__incl.map  IDatabase_8h__dep__incl.md5  IDatabase_8h__incl.map  IDatabase_8h__incl.md5  IDatabase_8h_source.html  IDocDatabase_8h.html  IDocDatabase_8h__dep__incl.map  IDocDatabase_8h__dep__incl.md5  IDocDatabase_8h__incl.map  IDocDatabase_8h__incl.md5  IDocDatabase_8h_source.html  MatchingDocs_8h.html  MatchingDocs_8h__dep__incl.map  MatchingDocs_8h__dep__incl.md5  MatchingDocs_8h__incl.map  MatchingDocs_8h__incl.md5  MatchingDocs_8h_source.html  README.md  (+787 more)
.github/workflows/: cmake_build.yml  doxygen.yml
docs/: TheQueryTreePlan.md
include/: Database.h  DatabaseWrapper.h  IDocDatabase.h  document.h  query.h  searcher.h  types.h  weight.h
include/api/: Router.h  Server.h
include/index/: DocDatabase.h  IDatabase.h  IDocDatabase.h
include/query-processing/: bkTree.h  query.h  queryNode.h  queryOperator.h  queryTree.h  stemmer.h
include/search/: MatchingDocs.h  RelevantDocs.h  Router.h  SearchResult.h  query.h  searcher.h  weight.h
include/snippets/: fragmenter.h  highlighter.h  scorer.h  token.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_7.js  classes_8.js  classes_a.js  classes_b.js  classes_d.js  (+120 more)
src/: DatabaseWrapper.h  test_lmdb.cpp
src/api/: Router.cc  Server.cc
src/index/: Database.cc  DatabaseWrapper.cpp  DocDatabase.cc
src/query-processing/: bkTree.cc  operators.txt  query.cc  query.cpp  query.hpp  queryNode.cc  queryOperator.cc  queryTree.cc  stemmer.cc
src/search/: Router.cc  Server.cc  StemAndIndexNetworked.cc  crow_all.h  query.cc  rest_api.cc  searcher.cc  weight.cc
src/snippets/: fragmenter.cc  highlighter.cc  scorer.cc
tests/: bkTreeTest.cc  databaseTest.cc  queryTest.cc  queryTreeTest.cc  readme.md  restTest.cc  stemmerTest.cc
tests/index/: test_docdb.cc
tests/mock/: MockDatabase.h  MockDocDatabase.h
tests/query-processing/: queryNodeTest.cc  queryTest.cc  queryTreeTest.cc
tests/search/: StemAndIndexNetworkedTest.cc  test_searcher.cc
tests/snippets/: test_highlighter.cc
ui/: LICENSE  README.md  biome.json  bun.lockb  next.config.ts  package.json  tsconfig.json
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: footer.tsx  header.tsx  logo-switcher.tsx  pagination-pages.tsx  theme-switcher.tsx
ui/src/lib/types/: search-results.ts
